cmake_minimum_required(VERSION 3.25)
project(NewCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(NewCode Others/main.cpp)

add_executable(testalone Others/testalone.cpp)
add_executable(zhaohangxinyongka_2019cekai2th practice_moni/zhaohangxinyongka_2019cekai2th.cpp)
add_executable(NO6biji practice_moni/xiaohongshu_2020_ceshi1/NO6biji.cpp)
add_executable(NO8zhanlipin practice_moni/xiaohongshu_2020_ceshi1/NO8zhanlipin.cpp)
add_executable(lianxi_shuliehe bishiheji/xiaohongshu_shixi_0409/lianxi_shuliehe.cpp)
add_executable(shuangseqiu bishiheji/xiaohongshu_shixi_0409/shuangseqiu.cpp)
add_executable(01delstring bishiheji/zhaohangcard_shixi_0409/01delstring.cpp)
add_executable(02rechengji bishiheji/zhaohangcard_shixi_0409/02rechengji.cpp)
add_executable(huawei1 bishiheji/huawei_0510/huawei1.cpp)
add_executable(huawei2 bishiheji/huawei_0510/huawei2.cpp)